@@ -1,5 +1,6 @@
 package com.spurvago.server.security;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -23,33 +24,30 @@ import springfox.documentation.swagger2.annotations.EnableSwagger2;
 @Configuration
 @EnableSwagger2
 public class SwaggerConfig {
-    private static final String BASIC_AUTH = "basicAuth";
-    private static final String BEARER_AUTH = "Bearer";
-
     @Bean
     public Docket api() {
-        return new Docket(DocumentationType.SWAGGER_2).select().apis(RequestHandlerSelectors.basePackage("com.javachinna")).paths(PathSelectors.any()).build().apiInfo(apiInfo())
-                .securitySchemes(securitySchemes()).securityContexts(List.of(securityContext()));
+        return new Docket(DocumentationType.SWAGGER_2)
+                .apiInfo(apiInfo())
+                .securitySchemes(Arrays.asList(apiKey()))
+                .select()
+                .apis(RequestHandlerSelectors.any())
+                .paths(PathSelectors.any())
+                .build();
+    }
+
+    private ApiKey apiKey() {
+        return new ApiKey("JWT", "Authorization", "header");
     }
 
     private ApiInfo apiInfo() {
-        return new ApiInfo("Product REST API", "Product API to perform CRUD opertations", "1.0", "Terms of service",
-                new Contact("Java Chinna", "www.javachinna.com", "java4chinna@gmail.com"), "License of API", "API license URL", Collections.emptyList());
-    }
-
-    private List<SecurityScheme> securitySchemes() {
-        return List.of(new BasicAuth(BASIC_AUTH), new ApiKey(BEARER_AUTH, "Authorization", "header"));
-    }
-
-    private SecurityContext securityContext() {
-        return SecurityContext.builder().securityReferences(List.of(basicAuthReference(), bearerAuthReference())).forPaths(PathSelectors.ant("/products/**")).build();
-    }
-
-    private SecurityReference basicAuthReference() {
-        return new SecurityReference(BASIC_AUTH, new AuthorizationScope[0]);
-    }
-
-    private SecurityReference bearerAuthReference() {
-        return new SecurityReference(BEARER_AUTH, new AuthorizationScope[0]);
+        return new ApiInfo(
+                "SPUR VA GO???",
+                "Eleganckie API.",
+                "1.0",
+                "Terms of service",
+                new Contact("Szymon Palich", "https://www.spurva.go", "s.palich@spurva.go"),
+                "GNU GPLv3",
+                "https://www.gnu.org/licenses/gpl-3.0.html",
+                Collections.emptyList());
     }
 }
